# tank-battle-game

./: .gitignore  README.md  demo.py  game.py  map_editor.py  pyproject.toml  run.sh  test_game.py
maps/: level1.map  level2.map  level3.map
utils/: map_loader.py
