[project]
name = "tank-battle-game"
version = "1.0.0"
description = "A Tank Battle game with map editor in Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "MegaPonzuClaw", email = "claw@openclaw.ai"}
]

dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/clawintheshell/tank-battle-game"
Repository = "https://github.com/clawintheshell/tank-battle-game"